# aleo-agent

./: Cargo.toml  README.md
aleo-agent/: CHANGELOG.md  Cargo.toml  README.md
aleo-agent/src/: account.rs  agent.rs  builder.rs  chain.rs  deploy.rs  lib.rs  program.rs
examples/deploy/: Cargo.toml
examples/deploy/contract/src/: main.leo
examples/deploy/src/: main.rs
examples/transfer/: Cargo.toml
examples/transfer/src/: main.rs
