[package]
name = "aleo-agent"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Agent library to communicate with the Aleo Network"
homepage = "https://crates.io/crates/aleo-agent"
documentation = "https://docs.rs/aleo-agent/latest/aleo_agent"
readme = "README.md"
categories = ["api-bindings", "data-structures", "no-std"]
keywords = ["aleo", "agent", "AleoHQ", "aleo-agent", "rust"]
include = ["src", "Cargo.toml", "README.md"]

[dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
thiserror = { workspace = true }

[dependencies.snarkvm]
git = "https://github.com/AleoNet/snarkVM.git"
branch = "mainnet"

ureq = "2.9.6"
indexmap = "2"
once_cell = "1"